--- a/app/views/Alunos/form.html
+++ b/app/views/Alunos/form.html
@@ -1,21 +1,13 @@
 #{extends 'main.html' /}
 #{set title:'Adicionar Aluno' /}
+#{set titleicon: 'fa fa-user-plus icon-gradient bg-tempting-azure' /}
+#{set pagetitle: 'Novo Aluno' /}
+#{set subheading: 'Cadastrar novo aluno no banco de dados.' /}
+#{set alunostabactive: 'mm-active' /}
+#{set alunosexpanded: 'true' /}
+#{set aformactive: 'mm-active' /}
 <meta charset="utf-8">
 
-<div class="app-page-title">
-    <div class="page-title-wrapper">
-        <div class="page-title-heading">
-            <div class="page-title-icon">
-                <i class="fa fa-user-plus icon-gradient bg-tempting-azure">
-                </i>
-            </div>
-            <div>Novo Aluno	
-                <div class="page-title-subheading">Cadastrar novo aluno no banco de dados.
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
 <div class="tab-content">
 	<div class="tab-pane tabs-animation fade show active" id="tab-content-0" role="tabpanel">
 	    <div class="main-card mb-3 card">
