--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,33 +1,26 @@
 #{extends 'main.html' /}
-#{set title:'Home' /}
+#{set title:'Página Inicial' /}
 <meta charset="utf-8">
 
-<div class="app-page-title">
-    <div class="page-title-wrapper">
-        <div class="page-title-heading">
-            <div class="page-title-icon">
-                <i class="fa fa-home icon-gradient bg-plum-plate">
-                </i>
-            </div>
-            <div>Página Inicial	
-                <div class="page-title-subheading">Olá ${session.get("usuario.nome")}! seja bem vind@ à sua página inicial do SEACAR.
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
-
+#{set titleicon: 'fa fa-home icon-gradient bg-plum-plate' /}
+#{set pagetitle: 'Página Inicial' /}
+#{set subheading: 'Seja bem vind@ à sua página inicial do SEACAR.' /}
+#{set indexactive: 'mm-active' /}
 
 <div class="col-md-6">
     <div class="main-card mb-3 card">
         <div class="card-body"><h5 class="card-title">List group contextual classes</h5>
             <ul class="list-group">
             #{if session.get("usuario.nivel").equals("1")}
-                <li class="list-group-item-success list-group-item">Somente alunos podem ver</li>
+                <li class="list-group-item-success list-group-item">PÁGINA INICIAL DO ALUNO</li>
             #{/if}
             #{if session.get("usuario.nivel").equals("2")}
-                <li class="list-group-item-info list-group-item">Somente professores podem ver</li>
+                <li class="list-group-item-info list-group-item">PÁGINA INICIAL DO PROFESSOR</li>
             #{/if}
+            #{if session.get("usuario.nivel").equals("3")}
+                <li class="list-group-item-warning list-group-item">PÁGINA INICIAL DA SEAC</li>
+            #{/if}
+            <li class="list-group-item-danger list-group-item">${session.get("usuario.nivel")}</li>
             </ul>
         </div>
     </div>
