--- a/app/views/Professores/form.html
+++ b/app/views/Professores/form.html
@@ -1,21 +1,13 @@
 #{extends 'main.html' /}
 #{set title:'Adicionar Professor' /}
+#{set titleicon: 'fa fa-user-plus icon-gradient bg-night-fade' /}
+#{set pagetitle: 'Novo Professor' /}
+#{set subheading: 'Cadastrar novo professor no banco de dados.' /}
+#{set professorestabactive: 'mm-active' /}
+#{set professoresexpanded: 'true' /}
+#{set pformactive: 'mm-active' /}
 <meta charset="utf-8">
 
-<div class="app-page-title">
-    <div class="page-title-wrapper">
-        <div class="page-title-heading">
-            <div class="page-title-icon">
-                <i class="fa fa-user-plus icon-gradient bg-night-fade">
-                </i>
-            </div>
-            <div>Novo Professor	
-                <div class="page-title-subheading">Cadastrar novo professor no banco de dados.
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
 <div class="tab-content">
 	<div class="tab-pane tabs-animation fade show active" id="tab-content-0" role="tabpanel">
 	    <div class="main-card mb-3 card">
