--- a/app/views/Requerimentos/form.html
+++ b/app/views/Requerimentos/form.html
@@ -1,60 +1,42 @@
 #{extends 'main.html' /}
 #{set title:'Adicionar Requerimento' /}
+#{set titleicon: 'fa fa-file icon-gradient bg-sunny-morning' /}
+#{set pagetitle: 'Novo Requerimento' /}
+#{set subheading: 'Cadastrar novo requerimento no banco de dados.' /}
+#{set requerimentostabactive: 'mm-active' /}
+#{set requerimentosexpanded: 'true' /}
+#{set rformactive: 'mm-active' /}
 <meta charset="utf-8">
 
-
-<div class="app-page-title">
-    <div class="page-title-wrapper">
-        <div class="page-title-heading">
-            <div class="page-title-icon">
-                <i class="pe-7s-file icon-gradient bg-premium-dark">
-                </i>
-            </div>
-            <div>Novo Requerimento	
-                <div class="page-title-subheading">Cadastrar novo requerimento no banco de dados.
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
 <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
     <li class="nav-item">
         <a role="tab" class="nav-link active" id="tab-0" data-toggle="tab" href="#tab-content-0">
-            <span>Justificativa de Faltas</span>
+            <span>Reposição de Atividades</span>
         </a>
     </li>
     <li class="nav-item">
         <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#tab-content-1">
-            <span>Reposição de Atividades</span>
+            <span>Justificativa de Faltas</span>
         </a>
     </li>
 </ul>
+
 <div class="tab-content"> 
 	<div class="tab-pane tabs-animation fade show active" id="tab-content-0" role="tabpanel">
 		<div class="main-card mb-3 card">
 			<div class="card-body">
-				<h5 class="card-title">Justificativa de Faltas</h5>
-				<form class="" action="@{Requerimentos.salvarJus()}" method="post">
+				<h5 class="card-title">Reposição de Atividades</h5>
+				<form class="" action="@{Requerimentos.salvarRep()}" method="post">
 					<div class="divider"></div>
-					<div class="position-relative row form-group">
-						<label class="col-sm-2 col-form-label">Aluno</label>
-                        <div class="col-sm-10">
-                        	<select name="requerimento.aluno.id" id="exampleSelect" class="form-control">
-                        		<option>-</option>
-                        		#{list items:alunos, as: 'aluno'}
-                        			<option value="${aluno.id}">${aluno.nome}</option>
-                        		#{/list}
-                        	</select>
-                       	</div>
-                    </div>
 					
+					<input type="hidden" name="requerimento.aluno.id" value="${aluno.id}">
 					<div class="position-relative row form-group">
 						<label class="col-sm-2 col-form-label">Professor</label>
                         <div class="col-sm-10">
                         	<select name="requerimento.professor.id" id="exampleSelect" class="form-control">
                         		<option>-</option>
-                        		#{list items:professores, as: 'professor'}
-                        			<option value="${professor.id}">${professor.nome}</option>
+                        		#{list professores}
+                        			<option value="${_.id}">${_.nome}</option>
                         		#{/list}
                         	</select>
                        	</div>
@@ -76,21 +58,10 @@
     <div class="tab-pane tabs-animation fade" id="tab-content-1" role="tabpanel">
         <div class="main-card mb-3 card">
             <div class="card-body">
-            	<h5 class="card-title">Reposição de Atividades</h5>
-                <form class="" action="@{Requerimentos.salvarRep()}" method="post">
+            	<h5 class="card-title">Justificativa de Faltas</h5>
+                <form class="" action="@{Requerimentos.salvarJus()}" method="post">
                     <div class="divider"></div>
-					<div class="position-relative row form-group">
-						<label for="exampleSelect" class="col-sm-2 col-form-label">Aluno</label>
-                        <div class="col-sm-10">
-                        	<select name="requerimento.aluno.id" id="exampleSelect" class="form-control">
-                        		<option>-</option>
-                        		#{list items:alunos, as: 'aluno'}
-                        			<option value="${aluno.id}">${aluno.nome}</option>
-                        		#{/list}
-                        	</select>
-                       	</div>
-                    </div>
-                    
+					<input type="hidden" name="requerimento.aluno.id" value="${aluno.id}">
                     <div class="position-relative row form-group">
                     	<label class="col-sm-2 col-form-label">Data</label>
 						<div class="col-sm-10">
