Implementação do login através da API do SUAP

--- a/app/views/Alunos/listar.html
+++ b/app/views/Alunos/listar.html
@@ -41,11 +41,11 @@
 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-danger">Excluir</button>
                                     </a>
                                 </td>
-								<td>
-									<a href="@{Alunos.editar(_.id)}">
-										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-primary">Editar</button>
-									</a>
-								</td>
+<!-- 								<td> -->
+<!-- 									<a href=""> -->
+<!-- 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-primary">Editar</button> -->
+<!-- 									</a> -->
+<!-- 								</td> -->
 							</tr>
 						#{/list}
 						#{else}
