--- a/app/views/Professores/listar.html
+++ b/app/views/Professores/listar.html
@@ -40,9 +40,9 @@
                                     </a>
                                 </td>
 								<td>
-									<a href="@{Professores.editar(_.id)}">
-										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-primary">Editar</button>
-									</a>
+<!-- 									<a href=""> -->
+<!-- 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-primary">Editar</button> -->
+<!-- 									</a> -->
 								</td>
 							</tr>
 						#{/list}
