--- a/app/views/Requerimentos/form.html
+++ b/app/views/Requerimentos/form.html
@@ -2,7 +2,7 @@
 #{set title:'Adicionar Requerimento' /}
 #{set titleicon: 'fa fa-file icon-gradient bg-sunny-morning' /}
 #{set pagetitle: 'Novo Requerimento' /}
-#{set subheading: 'Cadastrar novo requerimento no banco de dados.' /}
+#{set subheading: 'Submeter novo requerimento.' /}
 #{set requerimentostabactive: 'mm-active' /}
 #{set requerimentosexpanded: 'true' /}
 #{set rformactive: 'mm-active' /}
