--- a/app/views/Login/form.html
+++ b/app/views/Login/form.html
@@ -15,18 +15,17 @@
 			<div class="register-info-box">
 				<h2>Bem Vindo(a) ao <strong>SEAC</strong>AR</h2>
 				<p>Esta é uma plataforma de gestão de requerimentos totalmente online.</p>
-				<a href=""><button class="register-button">Registre-se</button></a>
+				<p>Efetue o Login com sua conta do SUAP para continuar</p>
 				
 			</div>
 								
 			<div class="white-panel">
-				<form action="@{Login.autentica()}" method="post">
+				<form action="@{Login.autenticarSuap()}" method="post">
 					<div class="login-show">
-						<h2>LOGIN</h2>
-						<input type="email" placeholder="Email" name="email" value="${email}">
+						<div><img src="@{'public/images/Suap-login.png'}"></div>
+						<input type="text" placeholder="Matricula" name="matricula" value="${matricula}">
 						<input type="password" placeholder="Password" name="senha">
-						<button type="submit">Login</button>
-						<a href="">Forgot password?</a>
+						<button type="submit">Login</button><br><br>
 						#{if flash.error}
 							<div class="login-fail">${flash.error}</div>
 						#{/if}
