--- a/app/views/ReqEspeciais/listar.html
+++ b/app/views/ReqEspeciais/listar.html
@@ -1,16 +1,12 @@
 #{extends 'main.html' /}
 #{set title:'Requerimentos Enviados' /}
 #{set titleicon: 'fa fa-archive icon-gradient bg-sunny-morning' /}
-#{set requerimentostabactive: 'mm-active' /}
-#{set requerimentosexpanded: 'true' /}
-#{set rlistaractive: 'mm-active' /}
+#{set reqespectabactive: 'mm-active' /}
+#{set reqespecexpanded: 'true' /}
+#{set relistaractive: 'mm-active' /}
 #{if session.get("usuario.tipo").equals("Aluno")}
 	#{set pagetitle: 'Registro de Atividades' /}
 	#{set subheading: 'Registro dos requerimentos que você enviou.' /}
-#{/if}
-#{if session.get("usuario.tipo").equals("Professor")}
-	#{set pagetitle: 'Registro de Entrada' /}
-	#{set subheading: 'Registro dos requerimentos que você recebeu.' /}
 #{/if}
 #{if session.get("usuario.tipo").equals("adm")}
 	#{set pagetitle: 'Registro de Atividades' /}
@@ -29,21 +25,19 @@
                         <th class="text-center">#</th>
 						<th>Tipo</th>
 						<th>Aluno</th>
-						<th>Professor</th>
 						<th>Opções</th>
                     </tr>
                     </thead>
                     <tbody>
-                    	#{list requerimentos}
+                    	#{list reqEspeciais}
 							<tr>
 								<td class="text-center">
 									<strong>${_index}</strong>
 								</td>
 								<td>${_.tipo}</td>
 								<td>${_.aluno?.nome}</td>
-								<td>${_.professor?.nome}</td>
 								<td>
-									<a href="@{Requerimentos.deletar(_.id)}">
+									<a href="@{ReqEspeciais.deletar(_.id)}">
 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-danger">Excluir</button>
                                     </a>
                                 </td>
