--- a/app/views/Login/form.html
+++ b/app/views/Login/form.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+	<link rel="icon" type="image/png" sizes="16x16" href="@{'public/architectui-html-free/architectui-html-free/assets/images/seacar-icon-tab.png'}">
 	<meta charset="utf-8">
 	<title>SEACAR - Sistema de Administração de Requerimentos da Secretaria Acadêmica</title>
 	<link href="@{'public/LoginPage/css/style.css'}" rel="stylesheet">
