--- a/app/views/Professores/listar.html
+++ b/app/views/Professores/listar.html
@@ -30,7 +30,7 @@
 								<td class="text-center">
 									<strong>${_index}</strong>
 								</td>
-								<td><a href="@{Application.perfil(_.matricula)}">${_.nome}</a></td>
+								<td><a href="@{Application.perfilProf(_.matricula)}">${_.nome}</a></td>
 								<td>${_.matricula}</td>
 								<td>${_.email}</td>
 								<td>${_.disciplina}</td>
@@ -39,11 +39,6 @@
 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-danger">Excluir</button>
                                     </a>
                                 </td>
-								<td>
-<!-- 									<a href=""> -->
-<!-- 										<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-primary">Editar</button> -->
-<!-- 									</a> -->
-								</td>
 							</tr>
 						#{/list}
 						#{else}
