Implementação do status do requerimento

--- a/app/views/Application/pesquisa.html
+++ b/app/views/Application/pesquisa.html
@@ -17,6 +17,10 @@
 						<th>Tipo</th>
 						<th>Aluno</th>
 						<th>Professor</th>
+						#{if session.get("usuario.tipo").equals("Professor") == false} 
+							<th class="text-center">Status</th>
+						#{/if}
+						<th>Opções</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -28,6 +32,28 @@
 								<td>${_.tipo}</td>
 								<td>${_.aluno?.nome}</td>
 								<td>${_.professor?.nome}</td>
+								#{if session.get("usuario.tipo").equals("Professor") == false}
+									#{if _.status.equals("2")}
+										<td class="text-center">
+											<div class="mb-2 mr-2 badge badge-warning">Pendente</div>
+		                                </td>
+	                                #{/if}
+	                                #{if _.status.equals("1")}
+										<td class="text-center">
+											<div class="mb-2 mr-2 badge badge-success">Deferido</div>
+		                                </td>
+	                                #{/if}
+	                                #{if _.status.equals("0")}
+										<td class="text-center">
+											<div class="mb-2 mr-2 badge badge-danger">Indeferido</div>
+		                                </td>
+	                                #{/if}
+	                            #{/if}
+	                            <td>
+									<a href="@{Requerimentos.detalhes(_.id)}">
+										<button class="mb-2 mr-2 btn btn-primary">Abrir</button>
+                                    </a>
+                                </td>
 							</tr>
 						#{/list}
 						#{else}
