--- a/app/views/Disciplinas/dados.html
+++ b/app/views/Disciplinas/dados.html
@@ -1,8 +1,8 @@
 #{extends 'main.html' /}
-#{set title:'SEACAR - Disciplinas' /}
+#{set title:'SEACAR - Detalhes da Disciplina' /}
 #{set titleicon: 'fa fa-book icon-gradient bg-premium-dark' /}
-#{set pagetitle: 'Disciplinas' /}
-#{set subheading: 'Disciplinas Cadastradas.' /}
+#{set pagetitle: 'Detalhes da disciplina' /}
+#{set subheading: 'Dados da disciplina selecionada.' /}
 #{set disciplinasactive: 'mm-active' /}
 <meta charset="utf-8">
 
