--- a/app/views/Requerimentos/form.html
+++ b/app/views/Requerimentos/form.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
-#{set title:'SEACAR - Adicionar Requerimento' /}
+#{set title:'SEACAR - Novo Requerimento' /}
 #{set titleicon: 'fa fa-file icon-gradient bg-sunny-morning' /}
 #{set pagetitle: 'Novo Requerimento' /}
 #{set subheading: 'Submeter novo requerimento.' /}
