Adição do upload de anexos ao requerimento

--- a/app/views/Requerimentos/detalhes.html
+++ b/app/views/Requerimentos/detalhes.html
@@ -4,3 +4,5 @@
 #{set pagetitle: 'Detalhes do Requerimento' /}
 #{set subheading: 'Dados do requerimento selecionado.' /}
 <meta charset="utf-8">
+
+<img src="/uploads/${requerimento.id}/${requerimento.fotoAnexo}" style="width:200px">
