--- a/app/views/Application/pesquisa.html
+++ b/app/views/Application/pesquisa.html
@@ -17,9 +17,7 @@
 						<th>Tipo</th>
 						<th>Aluno</th>
 						<th>Professor</th>
-						#{if session.get("usuario.tipo").equals("Professor") == false} 
-							<th class="text-center">Status</th>
-						#{/if}
+						<th class="text-center">Status</th>
 						<th>Opções</th>
                     </tr>
                     </thead>
@@ -31,24 +29,39 @@
 								</td>
 								<td>${_.tipo}</td>
 								<td>${_.aluno?.nome}</td>
-								<td>${_.professor?.nome}</td>
-								#{if session.get("usuario.tipo").equals("Professor") == false}
-									#{if _.status.equals("2")}
+								#{if _.tipo.equals("Reposição de Atividades")}
+									<td>${_.professor?.nome}</td>
+								#{/if}
+								#{else}
+									<td class="text-center">- - -</td>
+								#{/else}
+								#{if _.status.equals("3")}
+									<td class="text-center">
+										<div class="mb-2 mr-2 badge badge-warning">Pendente</div>
+	                                </td>
+                                #{/if}
+								#{if _.status.equals("2") && session.get("usuario.tipo").equals("adm")}
+			                    	<td class="text-center">
+										<div class="mb-2 mr-2 badge badge-warning">Ao Professor</div>
+	                                </td>
+	                            #{/if}
+	                            #{else}
+				                    #{if _.status.equals("2")}
 										<td class="text-center">
 											<div class="mb-2 mr-2 badge badge-warning">Pendente</div>
 		                                </td>
 	                                #{/if}
-	                                #{if _.status.equals("1")}
-										<td class="text-center">
-											<div class="mb-2 mr-2 badge badge-success">Deferido</div>
-		                                </td>
-	                                #{/if}
-	                                #{if _.status.equals("0")}
-										<td class="text-center">
-											<div class="mb-2 mr-2 badge badge-danger">Indeferido</div>
-		                                </td>
-	                                #{/if}
-	                            #{/if}
+	                            #{/else}
+                                #{if _.status.equals("1")}
+									<td class="text-center">
+										<div class="mb-2 mr-2 badge badge-success">Deferido</div>
+	                                </td>
+                                #{/if}
+                                #{if _.status.equals("0")}
+									<td class="text-center">
+										<div class="mb-2 mr-2 badge badge-danger">Indeferido</div>
+	                                </td>
+                                #{/if}
 	                            <td>
 									<a href="@{Requerimentos.detalhes(_.id)}">
 										<button class="mb-2 mr-2 btn btn-primary">Abrir</button>
