--- a/app/views/Disciplinas/form.html
+++ b/app/views/Disciplinas/form.html
@@ -12,19 +12,20 @@
         	<input type="hidden" name="disciplina.id" value="${disciplina?.id}">
             <div class="position-relative row form-group"><label class="col-sm-2 col-form-label">Nome</label>
                 <div class="col-sm-10">
-                	<input name="disciplina.nome" type="text" class="form-control" value="${disciplina?.nome}">
-                	<span class="validation-fail">#{error 'disciplina.nome' /}</span>
+                	<input name="disciplina.nome" type="text" class="form-control" value="${disciplina?.nome}" required>
+<!--                 	<span class="validation-fail">#{error 'disciplina.nome' /}</span> -->
                	</div>
             </div>
             
             <div class="position-relative row form-group">
             	<label class="col-sm-2 col-form-label">Curso</label>
                 <div class="col-sm-10">
-                	<select name="disciplina.curso" class="form-control">
+                	<select name="disciplina.curso" class="form-control" required>
+                		<option value="">Selecione o curso</option>
                 		<option value="Todos">Todos</option>
-                		<option value="Técnico de Nível Médio em Informática" #{if disciplina?.curso.equals("Técnico de Nível Médio em Informática")} selected #{/if}>Informática</option>
-                		<option value="Técnico de Nível Médio em Química" #{if disciplina?.curso.equals("Técnico de Nível Médio em Química")} selected #{/if}>Química</option>
-                		<option value="Técnico de Nível Médio em Recursos Pesqueiros" #{if disciplina?.curso.equals("Técnico de Nível Médio em Recursos Pesqueiros")} selected #{/if}>Recursos Pesqueiros</option>
+                		<option value="Técnico de Nível Médio em Informática">Informática</option>
+                		<option value="Técnico de Nível Médio em Química" >Química</option>
+                		<option value="Técnico de Nível Médio em Recursos Pesqueiros">Recursos Pesqueiros</option>
                 	</select>
                	</div>
             </div>
