--- a/app/views/Requerimentos/form.html
+++ b/app/views/Requerimentos/form.html
@@ -34,7 +34,7 @@
                     <div class="position-relative row form-group">
 						<label class="col-sm-2 col-form-label">Disciplina</label>
                         <div class="col-sm-10">
-                        	<select name="idDisciplina" class="form-control">
+                        	<select name="idDisciplina" class="form-control" required>
                         		<option value="">Selecione a Disciplina</option>
                         		#{list disciplinas}
                         			<option value="${_.id}">${_.nome}</option>
@@ -42,6 +42,7 @@
                         	</select>
                        	</div>
                     </div>
+                    
                     
                     #{error 'disciplina.nome' /}
                     
@@ -63,8 +64,9 @@
                     <div class="position-relative row form-group">
                     	<label class="col-sm-2 col-form-label">Data</label>
 						<div class="col-sm-10">
-							<input name="requerimento.data" type="date" class="form-control">
+							<input name="requerimento.data" type="date" class="form-control" required>
 						</div>
+						<span class="validation-fail">#{error 'requerimento.data' /}</span>
 					</div>
 					
 					<div class="position-relative row form-group">
@@ -81,10 +83,11 @@
                     <div class="position-relative form-group">
                     	<label for="exampleFile" class="">Anexo</label>
                     	
-                   		<input name="foto" type="file" class="form-control-file">
+                   		<input name="foto" type="file" class="form-control-file" required>
                         <small class="form-text text-muted">
                        		Envie aqui a foto do documento de justificativa do motivo da falta.
                         </small>
+                        <span class="validation-fail">#{error 'requerimento.fotoAnexo' /}</span>
 					</div>
                     <button class="btn btn-secondary" type="submit">Enviar</button>
                     
