--- a/app/views/Requerimentos/reposicao.html
+++ b/app/views/Requerimentos/reposicao.html
@@ -19,7 +19,7 @@
 					<div class="position-relative row form-group">
 						<label class="col-sm-2 col-form-label">Professor</label>
                         <div class="col-sm-10">
-                        	<select name="idProfessor" id="exampleSelect" class="form-control">
+                        	<select name="idProfessor" id="exampleSelect" class="form-control" required>
                         		<option value="">-</option>
                         		#{list professores}
                         			<option value="${_.id}">${_.nome}</option>
@@ -32,13 +32,13 @@
                     <div class="position-relative row form-group">
                     	<label class="col-sm-2 col-form-label">Data</label>
 						<div class="col-sm-10">
-							<input name="requerimento.data" type="date" class="form-control">
+							<input name="requerimento.data" type="date" class="form-control" required>
 						</div>
 					</div>
 					
 					<div class="position-relative form-group">
                     	<label for="exampleFile" class="">Anexo</label>
-                   		<input name="foto" type="file" class="form-control-file">
+                   		<input name="foto" type="file" class="form-control-file" required>
                         <small class="form-text text-muted">
                        		Envie aqui a foto do documento de justificativa do motivo da falta.
                         </small>
